manifests/deploymentblue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-blue
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
      version: blue

  template:
    metadata:
      labels:
        app: demo
        version: blue

    spec:
      containers:
      - name: nginx
        image: 467685081921.dkr.ecr.us-east-1.amazonaws.com/bluegreen-demo:202489e94bfccddc7b88946ba3f582efb3532350

        ports:
        - containerPort: 80
