manifests/deploymentgreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-green
  namespace: demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: demo
      version: green

  template:
    metadata:
      labels:
        app: demo
        version: green

    spec:
      containers:
      - name: nginx
        image: nginx:latest

        ports:
        - containerPort: 80
