manifests/nginx-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-exporter
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-exporter
  template:
    metadata:
      labels:
        app: nginx-exporter
    spec:
      containers:
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:1.4.2
        args:
          - --nginx.scrape-uri=http://demo-service.demo.svc.cluster.local/nginx_status
        ports:
        - containerPort: 9113
