manifests/nginx-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter
  namespace: demo
  labels:
    app: nginx-exporter
spec:
  selector:
    app: nginx-exporter
  ports:
  - port: 9113
    targetPort: 9113
