manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo

spec:
  selector:
    app: demo
    version: green

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
